syntax = "proto3";

package fr.upec.episen;

option java_multiple_files = true;
option java_package = "fr.upec.episen.proto";

service Book{
  rpc GetBookQuantity(BookQuantityRequest) returns (BookQuantityReply){}
  rpc RemoveBookQuantity(RemoveBookQuantityRequest) returns (RemoveBookQuantityReply){}
}

message BookQuantityRequest{
  string isbn = 1;
}

message BookQuantityReply{
  string quantity = 1;
}
message RemoveBookQuantityRequest{
  string isbn = 1;
  string quantity = 2;
}

message RemoveBookQuantityReply{
  string quantity = 1;
}
